# rosidl

rosidl_cmake/cmake/: rosidl_generate_interfaces.cmake
rosidl_generator_c/: CMakeLists.txt  package.xml
rosidl_generator_c/include/rosidl_generator_c/: arrays.h
rosidl_generator_c/resource/: msg__struct.h.template
rosidl_generator_c/rosidl_generator_c/: __init__.py
rosidl_generator_c/test/: test_interfaces.c
rosidl_parser/rosidl_parser/: __init__.py
